--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "name": "EvaMariaBot",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
+    "stack": "container",
     "keywords": [
       "telegram",
       "auto-filter",
@@ -14,101 +15,63 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/EvamariaTG/EvaMaria",
-    "repository": "https://github.com/EvamariaTG/EvaMaria",
+    "website": "https://github.com/rinrinx/KUTUPHANE-DENEME",
+    "repository": "https://github.com/rinrinx/KUTUPHANE-DENEME",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
-            "value": "1979407054:AAHrbXIb5rq0UKubtMKZulnDHWa_jkeDKQ4"
+            "required": true
         },
         "API_ID": {
             "description": "Get this value from https://my.telegram.org",
-            "value": "5412484"
+            "required": true
         },
         "API_HASH": {
             "description": "Get this value from https://my.telegram.org",
-            "value": "37402de39e5eb30d378bf20823db1dfc"
+            "required": true
         },
         "CHANNELS": {
             "description": "Username or ID of channel or group. Separate multiple IDs by space.",
-            "value": "-1001557739521 -1001545188373 -1001576786871 -1001573209661"
+            "required": false
         },
         "ADMINS": {
             "description": "Username or ID of Admin. Separate multiple Admins by space.",
-            "value": "1883113120"
+            "required": true
         },
         "PICS": {
             "description": "Add some telegraph link of pictures .",
-            "value": "https://telegra.ph/file/d2e91649376321a215d14.jpg"
+            "required": false
         },
         "LOG_CHANNEL": {
             "description": "Bot Logs,Give a channel id with -100xxxxxxx",
-            "value": "-1001495085614"
-        },
-        "SUPPORT_CHAT": {
-            "description": "Username of a Support Group / ADMIN. ( Should be username without @ and not ID)",
-            "value": "kutuphaneechat"
+            "required": true
         },
         "AUTH_USERS": {
             "description": "Username or ID of users to give access of inline search. Separate multiple users by space.\nLeave it empty if you don't want to restrict bot usage.",
-            "value": "",
             "required": false
         },
         "AUTH_CHANNEL": {
             "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
-            "value": "-1001558968179",
-            "required": false
-        },   
-        "USE_CAPTION_FILTER": {
-            "description": "Whether bot should use captions to improve search results. (True False)",
-            "value": "True",
-            "required": false
-        },
-        "CUSTOM_FILE_CAPTION": {
-            "description": "A custom file caption for your files. formatable with , file_name, file_caption, file_size, Read Readme.md for better understanding.",
-            "value": "",
             "required": false
         },
         "DATABASE_URI": {
             "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
-            "value": "mongodb+srv://kutuphanem:kutuphanem@cluster0.mp8sw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+            "required": true
         },
         "DATABASE_NAME": {
             "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
-            "value": "kutuphanem"
+            "required": false
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
-            "value": "kutuphane_dosya",
-            "required": false
-        },
-        "CACHE_TIME": {
-            "description": "The maximum amount of time in seconds that the result of the inline query may be cached on the server",
-            "value": "300",
-            "required": false
-        },
-        "IMDB": {
-            "description": "Imdb, the view of information when making True/False ",
-            "value": "False",
-            "required": false
-        },
-        "SINGLE_BUTTON": {
-            "description": "choose b/w single or double buttons https://github.com/EvamariaTG/EvaMaria/issues/22",
-            "value": "True",
-            "required": false
-        },
-        "P_TTTI_SHOW_OFF": {
-            "description": "Customize Result Buttons to Callback or Url by (True = url / False = callback)",
-            "value": "False",
+            "value": "Telegram_files",
             "required": false
         }
     },
     "addons": [],
-    "buildpacks": [
-        {
-            "url": "heroku/python"
-        }
-    ],
+    "buildpacks": [{
+        "url": "heroku/python"
+    }],
     "formation": {
         "worker": {
             "quantity": 1,
